[package]
name = "luajit"
version = "0.1.1"
authors = ["Dreae <dreae@dreae.onl>"]
build = "build.rs"
description = "Rust crate for calling LuaJIT from Rust"
documentation = "https://dreae.gitlab.io/luajit-rs/luajit/"
repository = "https://gitlab.com/Dreae/luajit-rs"
readme = "README.md"
keywords = ["luajit", "lua"]
license = "MIT"

[dependencies]
libc = "0.2.32"
bitflags = "1.2.1"

[build-dependencies]
cmake = "0.1"
